--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  outline: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Nunito Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #25405B;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+h1{
+  font-size: 6rem;
+}
+
+table{
+  /*position: absolute;
+  z-index: 2;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);*/
+  width: 60%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-radius: 0.75rem 0.75rem 0 0;
+  overflow: hidden;
+  box-shadow: 0 0.125rem 0.75rem rgba(32, 32, 32, .3);
+  background-color: white;
+  color: black;
+  text-align: center;
+
+}
+
+th,td{
+  padding: 0.75rem 0.938rem;
+}
+
+th{
+  background-color: grey;
+  text-transform: uppercase;
+}
+
+.app{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  color: white;
+}
+
+.center{
+  margin-left: auto;
+  margin-right: auto;
 }
