--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@ h1{
   text-transform: uppercase;  
 }
 
+h2{
+  text-align: center;
+  padding-bottom: .8rem;
+}
+
 h3{
   padding-top: .5rem;
 }
