--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ form{
   background-color: #171a21;
   border-radius: 21px;
   box-sizing: border-box;
-  height: 31.25rem;
+  height: 33.25rem;
   padding: 1.25rem;
   width: 30rem;
 }
@@ -62,6 +62,11 @@ input{
   padding: .25rem 1.25rem 0;
 }
 
+input[type="checkbox"]{
+  margin-top: .5rem;
+  height: 1.5rem;
+}
+
 button{
   background-color: #66c0f4;
   border-radius: 12px;
@@ -71,7 +76,7 @@ button{
   cursor: pointer;
   font-size: 1.125rem;
   height: 3.125rem;
-  margin-top: 2.375rem;
+  margin-top: .313rem;
   outline: 0;
   text-align: center;
   width: 100%;
@@ -122,6 +127,10 @@ tbody:nth-child(odd){
 .center{
   margin-left: auto;
   margin-right: auto;
+}
+
+.align{
+  text-align: center;
 }
 
 .loader,
