Text warning loading time

--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,11 @@ tbody:nth-child(odd){
   text-align: center;
 }
 
+.fixed-height{
+  display: block;
+  height: 80px;
+}
+
 .loader,
 .loader:before,
 .loader:after {
